[html,css] add contents to home page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <link rel="stylesheet" href="assets/css/styles.css"/>
 </head>
 <body>
+    <div class="year-end-sale-wrapper bg-success text-center">
+        <div class="year-end-sale-content">
+            <h3 class="year-end-sale-heading text-uppercas text-dark">
+                year end sale
+                <span class="text-white">
+                    <span>up to</span>
+                    <span>50%</span>
+                    <span>off</span>
+                </span>
+            </h3>
+        </div>
+    </div>
     <header>
         <div class="nav-wrapper">
             <div class="logo-container">
@@ -29,11 +41,11 @@
                 <div class="nav-container">
                     <ul class="nav-tabs">
                         <li class="nav-tab">Home</li>
-                        <li class="nav-tab">Products</li>
-                        <li class="nav-tab">Services</li>
-                        <li class="nav-tab">FAQ</li>
-                        <li class="nav-tab">Contact</li>
-                        <li class="nav-tab">Careers</li>
+                        <li class="nav-tab">Camping Equipment</li>
+                        <li class="nav-tab">Furniture</li>
+                        <li class="nav-tab">Review</li>
+                        <li class="nav-tab">Basket</li>
+                        <li class="nav-tab">Offers</li>
                     </ul>
                 </div>
             </nav>
@@ -114,59 +126,107 @@
             <span class="dot" onclick="currentSlide(3)"></span> 
         </div>
     </div>
-    <div class="row container-fluid item-wrapper mt-3 text-center">
-        <div class="col-4">
-            <div class="card p-2">
-                <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
-                <div class="item-description pt-2 pb-2">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
+    <div class="item-wrapper mt-2">
+        <h3 class="text-dark text-center">
+            Best Selling Items
+        </h3>
+        <div class="row container-fluid mt-3 text-center">
+            <div class="col-4">
+                <div class="card p-2">
+                    <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
+                    <div class="item-description pt-2 pb-2">
+                        <h4>
+                            Camping Bag
+                        </h4>
+                        <button class="btn btn-success mt-1">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card p-2">
+                    <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
+                    <div class="item-description pt-2 pb-2">
+                        <h4>
+                            Camping Bag
+                        </h4>
+                        <button class="btn btn-success mt-1">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card p-2">
+                    <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
+                    <div class="item-description pt-2 pb-2">
+                        <h4>
+                            Camping Bag
+                        </h4>
+                        <button class="btn btn-success mt-1">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card p-2">
+                    <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
+                    <div class="item-description pt-2 pb-2">
+                        <h4>
+                            Camping Bag
+                        </h4>
+                        <button class="btn btn-success mt-1">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card p-2">
+                    <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
+                    <div class="item-description pt-2 pb-2">
+                        <h4>
+                            Camping Bag
+                        </h4>
+                        <button class="btn btn-success mt-1">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card p-2">
+                    <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
+                    <div class="item-description pt-2 pb-2">
+                        <h4>
+                            Camping Bag
+                        </h4>
+                        <button class="btn btn-success mt-1">
+                            Add to Cart
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-4">
-            <div class="card p-2">
-                <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
-                <div class="item-description pt-2 pb-2">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
-                </div>
-            </div>
+        <div class="show-more text-center">
+            <button class="btn mt-2 mb-2">Show More</button>
         </div>
-        <div class="col-4">
-            <div class="card p-2">
-                <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
-                <div class="item-description pt-2 pb-2">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
-                </div>
+    </div>
+    <div class="container-fluid subscribe-letter p-5 bg-two">
+        <div class="row">
+            <div class="col-6 text-white">
+                <h4>Subscribe to our newsletter</h4>
+                <p>Get the latest news and updates from us</p>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="card p-2">
-                <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
-                <div class="item-description pt-2 pb-2">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card p-2">
-                <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
-                <div class="item-description pt-2 pb-2">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card p-2">
-                <img src="https://freepngimg.com/thumb/backpack/1-backpack-png-image.png" alt="Avatar" width="150">
-                <div class="item-description pt-2 pb-2">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
-                </div>
+            <div class="col-6">
+                <form>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                    <button type="submit" class="btn mt-1">Submit</button>
+                </form>
             </div>
         </div>
     </div>
@@ -197,7 +257,13 @@
                     <h4>Address</h4>
                     <p>123, Main Street, Your City, Your Country</p>
                     <p>Phone: +123 456 7890</p>
-                    <p>Email:
+                    <p>Email:</p>
+                </div>
+            </div>
+        </div>
+        <p>
+            &copy; 2022 <a href="#" class="text-primary">Campers</a>. All Rights Reserved.
+        </p>
     </div>
 </body>
 </html>
