equipment and basket page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campers</title>
+    <title>Campers | Home</title>
     <link rel="stylesheet" href="assets/css/variables.css"/>
     <link rel="stylesheet" href="assets/css/defaults.css"/>
     <link rel="stylesheet" href="assets/css/navbar.css"/>
@@ -40,12 +40,36 @@
                 </label>
                 <div class="nav-container">
                     <ul class="nav-tabs">
-                        <li class="nav-tab">Home</li>
-                        <li class="nav-tab">Camping Equipment</li>
-                        <li class="nav-tab">Furniture</li>
-                        <li class="nav-tab">Review</li>
-                        <li class="nav-tab">Basket</li>
-                        <li class="nav-tab">Offers</li>
+                        <li class="nav-tab">
+                            <a href="#">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-tab">
+                            <a href="equipment.html">
+                                Camping Equipment
+                            </a>
+                        </li>
+                        <li class="nav-tab">
+                            <a href="#">
+                                Furniture
+                            </a>
+                        </li>
+                        <li class="nav-tab">
+                            <a href="#">
+                                Review
+                            </a>
+                        </li>
+                        <li class="nav-tab">
+                            <a href="#">
+                                Basket
+                            </a>
+                        </li>
+                        <li class="nav-tab">
+                            <a href="#">
+                                Offers
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </nav>
