product page and review page updated

--- a/basket.html
+++ b/basket.html
@@ -52,7 +52,7 @@
                 <a href="#"> Basket </a>
               </li>
               <li class="nav-tab">
-                <a href="#"> Offers </a>
+                <a href="offers.html"> Offers </a>
               </li>
             </ul>
           </div>
