--- a/furniture.html
+++ b/furniture.html
@@ -52,7 +52,7 @@
                 <a href="basket.html"> Basket </a>
               </li>
               <li class="nav-tab">
-                <a href="#"> Offers </a>
+                <a href="offers.html"> Offers </a>
               </li>
             </ul>
           </div>
@@ -62,10 +62,7 @@
     <div class="section-1">
       <div class="container-fluid row section-1-content p-2">
         <div class="col-6 text-primary">
-          <h2 class="section-1-heading text-uppercase">
-            Up to 50% Off On Selected Tents
-          </h2>
-          <button class="section-1-btn btn mt-1 mb-1">Shop Now</button>
+          <h2 class="section-1-heading text-uppercase">Furniture</h2>
         </div>
         <div class="col section-1-img-wrapper">
           <img
