--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <div class="year-end-sale-wrapper bg-success text-center">
+    <div class="year-end-sale-wrapper bg-success text-center text-white">
       <div class="year-end-sale-content">
-        <h3 class="year-end-sale-heading text-uppercas text-dark">
-          year end sale
-          <span class="text-white">
-            <span>up to</span>
-            <span>50%</span>
-            <span>off</span>
-          </span>
-        </h3>
+        <div>+959250048922</div>
+        <div>
+          <span class="text-uppercase">Year End Sale</span> - Up to 50% Off
+        </div>
       </div>
     </div>
     <header>
@@ -56,19 +52,13 @@
                 <a href="basket.html"> Basket </a>
               </li>
               <li class="nav-tab">
-                <a href="#"> Offers </a>
+                <a href="offers.html"> Offers </a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
     </header>
-    <div class="container-fluid promotion-1 bg-success text-center">
-      <p class="promotion-1-heading text-uppercase m-0 p-1 font-bold">
-        Free shipping over
-        <span class="text-white">$100</span>
-      </p>
-    </div>
     <div class="section-1">
       <div class="section-1-content text-white p-1">
         <h1 class="section-1-heading text-uppercase">best valuable tents</h1>
@@ -92,7 +82,7 @@
           />
           <div class="promotion-price-wrapper">
             <h4 class="promotion pb-1">30% off</h4>
-            <button class="btn btn-success">Add to Cart</button>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
         </div>
       </div>
@@ -107,7 +97,7 @@
           />
           <div class="promotion-price-wrapper">
             <h4 class="promotion pb-1">20% off</h4>
-            <button class="btn btn-success">Add to Cart</button>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
         </div>
       </div>
@@ -122,7 +112,7 @@
           />
           <div class="promotion-price-wrapper">
             <h4 class="promotion pb-1">40% off</h4>
-            <button class="btn btn-success">Add to Cart</button>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
         </div>
       </div>
@@ -172,7 +162,7 @@
             />
             <div class="item-description pt-2 pb-2">
               <h4>Camping Bag</h4>
-              <button class="btn btn-success mt-1">Add to Cart</button>
+              <button class="btn btn-primary mt-1">Add to Cart</button>
             </div>
           </div>
         </div>
@@ -185,7 +175,7 @@
             />
             <div class="item-description pt-2 pb-2">
               <h4>Camping Bag</h4>
-              <button class="btn btn-success mt-1">Add to Cart</button>
+              <button class="btn btn-primary mt-1">Add to Cart</button>
             </div>
           </div>
         </div>
@@ -198,7 +188,7 @@
             />
             <div class="item-description pt-2 pb-2">
               <h4>Camping Bag</h4>
-              <button class="btn btn-success mt-1">Add to Cart</button>
+              <button class="btn btn-primary mt-1">Add to Cart</button>
             </div>
           </div>
         </div>
@@ -211,7 +201,7 @@
             />
             <div class="item-description pt-2 pb-2">
               <h4>Camping Bag</h4>
-              <button class="btn btn-success mt-1">Add to Cart</button>
+              <button class="btn btn-primary mt-1">Add to Cart</button>
             </div>
           </div>
         </div>
@@ -224,7 +214,7 @@
             />
             <div class="item-description pt-2 pb-2">
               <h4>Camping Bag</h4>
-              <button class="btn btn-success mt-1">Add to Cart</button>
+              <button class="btn btn-primary mt-1">Add to Cart</button>
             </div>
           </div>
         </div>
@@ -237,13 +227,13 @@
             />
             <div class="item-description pt-2 pb-2">
               <h4>Camping Bag</h4>
-              <button class="btn btn-success mt-1">Add to Cart</button>
+              <button class="btn btn-primary mt-1">Add to Cart</button>
             </div>
           </div>
         </div>
       </div>
       <div class="show-more text-center">
-        <button class="btn mt-2 mb-2">Show More</button>
+        <a href="equipment.html" class="btn btn-primary mt-2 mb-2">Show More</a>
       </div>
     </div>
     <div class="container-fluid subscribe-letter p-5 bg-two">
