--- a/offers.html
+++ b/offers.html
@@ -40,7 +40,7 @@
                 <a href="index.html"> Home </a>
               </li>
               <li class="nav-tab">
-                <a href="#"> Camping Equipment </a>
+                <a href="equipment.html"> Camping Equipment </a>
               </li>
               <li class="nav-tab">
                 <a href="furniture.html"> Furniture </a>
@@ -52,7 +52,7 @@
                 <a href="basket.html"> Basket </a>
               </li>
               <li class="nav-tab">
-                <a href="offers.html"> Offers </a>
+                <a href="#"> Offers </a>
               </li>
             </ul>
           </div>
@@ -62,7 +62,7 @@
     <div class="section-1">
       <div class="container-fluid row section-1-content p-2">
         <div class="col-6 text-primary">
-          <h2 class="section-1-heading text-uppercase">Equipment</h2>
+          <h2 class="section-1-heading text-uppercase">Offers</h2>
         </div>
         <div class="col section-1-img-wrapper">
           <img
