--- a/review.html
+++ b/review.html
@@ -52,7 +52,7 @@
                 <a href="basket.html"> Basket </a>
               </li>
               <li class="nav-tab">
-                <a href="#"> Offers </a>
+                <a href="offers.html"> Offers </a>
               </li>
             </ul>
           </div>
@@ -143,16 +143,70 @@
                 height="300"
               />
             </div>
-            <div class="pl-1">hello</div>
+            <div class="pl-1">
+              <h4 class="m-0">Tent</h4>
+              <p><span class="text-fade">Quantity:</span> 1</p>
+              <p><span class="text-fade">Price:</span> $ 250</p>
+              <p>Star: 3</p>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row mt-1 btn-direction">
-        <div class="col-6">
-          <a href="#" class="btn btn-primary mt-1">Previous Item</a>
-        </div>
-        <div class="col-6 text-right">
-          <button class="btn btn-primary mt-1">Next Item</button>
+          <div class="review-option mt-1">
+            <div class="review-img">
+              <img
+                src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
+                alt="Visa"
+                width="100"
+                height="100"
+              />
+            </div>
+            <div class="pl-1">
+              <h4 class="m-0">David</h4>
+              <p>
+                <span class="text-fade">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quisquam, quod.
+                </span>
+              </p>
+            </div>
+          </div>
+          <div class="review-option mt-1">
+            <div class="review-img">
+              <img
+                src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
+                alt="Visa"
+                width="100"
+                height="100"
+              />
+            </div>
+            <div class="pl-1">
+              <h4 class="m-0">Mary</h4>
+              <p>
+                <span class="text-fade">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quisquam, quod.
+                </span>
+              </p>
+            </div>
+          </div>
+          <div class="review-option mt-1">
+            <div class="review-img">
+              <img
+                src="https://sc01.alicdn.com/kf/Hf9c9b66fa05748588e6628931e893993F/240056294/Hf9c9b66fa05748588e6628931e893993F.jpg"
+                alt="Visa"
+                width="100"
+                height="100"
+              />
+            </div>
+            <div class="pl-1">
+              <h4 class="m-0">David</h4>
+              <p>
+                <span class="text-fade">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Quisquam, quod.
+                </span>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
