--- a/review.html
+++ b/review.html
@@ -311,10 +311,10 @@
       </div>
     </div>
     <!-- footer for retail company website -->
-    <div class="footer p-3">
+    <footer class="footer p-3">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-4">
+          <div class="col-s-12 col-4 mb-2">
             <h4>Company</h4>
             <ul>
               <li><a href="#">About Us</a></li>
@@ -324,7 +324,7 @@
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
-          <div class="col-4">
+          <div class="col-s-12 col-4 mb-2">
             <h4>Help</h4>
             <ul>
               <li><a href="#">Payments</a></li>
@@ -333,11 +333,13 @@
               <li><a href="#">FAQ</a></li>
             </ul>
           </div>
-          <div class="col-4">
+          <div class="col-s-12 col-4 mb-2">
             <h4>Address</h4>
             <p>123, Main Street, Your City, Your Country</p>
             <p>Phone: +123 456 7890</p>
-            <p>Email:</p>
+            <div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.5441490457433!2d96.13509161544958!3d16.848955788403387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19492c4bbe131%3A0x974ebe72a63ebb40!2sPyay%20Rd%2C%20Yangon!5e0!3m2!1sen!2smm!4v1673330755963!5m2!1sen!2smm" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
         </div>
       </div>
@@ -345,7 +347,7 @@
         &copy; 2022 <a href="#" class="text-primary">Campers</a>. All Rights
         Reserved.
       </p>
-    </div>
+    </footer>
   </body>
 </html>
 <script
