--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
         </div>
       </div>
     </div>
-    <div class="footer p-3">
+    <footer class="footer p-3">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-4">
+          <div class="col-s-12 col-4 mb-2">
             <h4>Company</h4>
             <ul>
               <li><a href="#">About Us</a></li>
@@ -365,7 +365,7 @@
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
-          <div class="col-4">
+          <div class="col-s-12 col-4 mb-2">
             <h4>Help</h4>
             <ul>
               <li><a href="#">Payments</a></li>
@@ -374,11 +374,13 @@
               <li><a href="#">FAQ</a></li>
             </ul>
           </div>
-          <div class="col-4">
+          <div class="col-s-12 col-4 mb-2">
             <h4>Address</h4>
             <p>123, Main Street, Your City, Your Country</p>
             <p>Phone: +123 456 7890</p>
-            <p>Email:</p>
+            <div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.5441490457433!2d96.13509161544958!3d16.848955788403387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c19492c4bbe131%3A0x974ebe72a63ebb40!2sPyay%20Rd%2C%20Yangon!5e0!3m2!1sen!2smm!4v1673330755963!5m2!1sen!2smm" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
         </div>
       </div>
@@ -386,12 +388,13 @@
         &copy; 2022 <a href="#" class="text-primary">Campers</a>. All Rights
         Reserved.
       </p>
-    </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/main_2.js"></script>
   </body>
 </html>
